--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  background-color: #CCEABB;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  display: flex;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cardBox {
+  align-self: center;
+
+}
+
+.card {
+  background-color: #F7F7F7;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
+  border-radius: 30px;
+  padding: 30px;
+}
+button {
+  background-color: #FDCB9E;
+  font-size: 15px;
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  text-transform: uppercase;
+  margin: 0 20px 0 20px;
+}
+h1 {
+  font-family: 'Rubik', sans-serif;
+  font-size: 40px;
+  margin-bottom: 10px;
+  color: #3F3F44;
+}
+h2, h3, button, cardBox{
+  font-family: 'PT Sans', sans-serif;
+  color: #3F3F44;
+  margin-bottom: 10px;
 }
